fixed text overflow

--- a/frontend/src/app/components/tasque-team/tasque-team.component.sass
+++ b/frontend/src/app/components/tasque-team/tasque-team.component.sass
@@ -34,6 +34,11 @@
   flex-flow: column
   padding-top: 5px
   text-align: center
+  width: 100%
+  > *
+    width: 100%
+    overflow: hidden
+    text-overflow: ellipsis
 
 .text-16
   font-size: 16px
